--- a/Behave-dark/Behave-dark.cfg
+++ b/Behave-dark/Behave-dark.cfg
@@ -89,6 +89,7 @@
         <FCParamGroup Name="MainWindow">
           <FCBool Name="TiledBackground" Value="0"/>
           <FCText Name="StyleSheet">Behave-dark.qss</FCText>
+          <FCText Name="OverlayActiveStyleSheet">Behave-dark-overlay.qss</FCText>
         </FCParamGroup>
       </FCParamGroup>
     </FCParamGroup>
