--- a/Behave-dark/Behave-dark.cfg
+++ b/Behave-dark/Behave-dark.cfg
@@ -23,6 +23,9 @@
           <FCParamGroup Name="Spreadsheet">
             <FCText Name="AliasedCellBackgroundColor">#9b4de6</FCText>
           </FCParamGroup>
+          <FCParamGroup Name="Start">
+            <FCBool Name="FileCardUseStyleSheet" Value="0"/>
+          </FCParamGroup>
         </FCParamGroup>
         <FCParamGroup Name="OutputWindow">
           <FCUInt Name="colorText" Value="3570717951"/>
