--- a/Light-modern/Light-modern.cfg
+++ b/Light-modern/Light-modern.cfg
@@ -12,6 +12,9 @@
             <FCUInt Name="BoxColor" Value="3974950143"/>
             <FCUInt Name="LinkColor" Value="1437270015"/>
             <FCUInt Name="BackgroundColor2" Value="2141107711"/>
+            <FCBool Name="UseStyleSheet" Value="0"/>
+            <FCBool Name="NewFileGradient" Value="0"/>
+            <FCBool Name="FileCardUseStyleSheet" Value="0"/>
             <FCUInt Name="FileThumbnailBorderColor" Value="879316735"/>
             <FCUInt Name="FileThumbnailBackgroundColor" Value="3688619007"/>
             <FCUInt Name="FileThumbnailSelectionColor" Value="879316735"/>
@@ -23,6 +26,9 @@
           </FCParamGroup>
           <FCParamGroup Name="Spreadsheet">
             <FCText Name="AliasedCellBackgroundColor">#feff9e</FCText>
+            <FCText Name="TextColor">#010101</FCText>
+            <FCText Name="PositiveNumberColor">#5dba00</FCText>
+            <FCText Name="NegativeNumberColor">#c01000</FCText>
           </FCParamGroup>
         </FCParamGroup>
         <FCParamGroup Name="OutputWindow">
