--- a/Dark-modern/Dark-modern.cfg
+++ b/Dark-modern/Dark-modern.cfg
@@ -22,9 +22,9 @@
           </FCParamGroup>
           <FCParamGroup Name="Spreadsheet">
             <FCText Name="AliasedCellBackgroundColor">#9b4de6</FCText>
-            <FCText Name="TextColor">#caf1ee</FCText>
-            <FCText Name="PositiveNumberColor">#5dba00</FCText>
-            <FCText Name="NegativeNumberColor">#c01000</FCText>
+            <FCText Name="TextColor">#ffffff</FCText>
+            <FCText Name="PositiveNumberColor">#04b404</FCText>
+            <FCText Name="NegativeNumberColor">#ff0404</FCText>
           </FCParamGroup>
           <FCParamGroup Name="Start">
             <FCUInt Name="BackgroundColor1" Value="1010580735"/>
@@ -34,6 +34,8 @@
             <FCUInt Name="BoxColor" Value="1583243007"/>
             <FCUInt Name="LinkColor" Value="1437270015"/>
             <FCUInt Name="BackgroundColor2" Value="2141107711"/>
+            <FCBool Name="UseStyleSheet" Value="0"/>
+            <FCBool Name="NewFileGradient" Value="0"/>
             <FCBool Name="FileCardUseStyleSheet" Value="0"/>
             <FCUInt Name="FileThumbnailBorderColor" Value="879316735"/>
             <FCUInt Name="FileThumbnailBackgroundColor" Value="1768516095"/>
